# pypi-pipeline

./: .gitignore  Dockerfile  Makefile  pyproject.toml
ingestion/: bigquery.py  duck.py  models.py  pipeline.py
ingestion/tests/: test_models.py
