[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypi-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-duckdb[md]>=1.9.6",
    "duckdb==1.3.2",
    "fire>=0.7.1",
    "google-auth>=2.40.3",
    "google-cloud-bigquery>=3.38.0",
    "google-cloud-bigquery-storage>=2.33.1",
    "loguru>=0.7.3",
    "pandas>=2.3.2",
    "pendulum>=3.1.0",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.9",
]

[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]

[tool.pytest.ini_options]
norecursedirs = ["pypi-duck-flow"]

[tool.setuptools]
packages = ["ingestion"]

